--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
 
             </div>
 
+            <div id="rc-splash-nav">
+
+                <ul>
+                    <li>profile</li><li>resources</li><li>projects</li>
+                </ul>
+
+            </div>
+
         </div>
 
         <script src="app.js"></script>
