--- a/index.html
+++ b/index.html
@@ -26,13 +26,19 @@
                 <h1 class="title">rcorrie</h1>
                 <h2 class="subtitle">software engineer</h2>
 
+                <div id="rc-splash-nav">
+
+                    <ul>
+                        <li>profile</li><li>resources</li><li>projects</li>
+                    </ul>
+
+                </div>
+
             </div>
 
-            <div id="rc-splash-nav">
+            <div id="rc-splash-footer">
 
-                <ul>
-                    <li>profile</li><li>resources</li><li>projects</li>
-                </ul>
+                <a href="http://www.github.com/rcorrie/" class="rc-icon-github"></a>
 
             </div>
 
