--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <title>rcorrie</title>
 
-        <link rel="stylesheet" type="text/css" href="./app.css" />
+        <link rel="stylesheet" type="text/css" href="dist/app.css" />
 
     </head>
 
@@ -44,7 +44,7 @@
 
         </div>
 
-        <script src="app.js"></script>
+        <script src="dist/app.js"></script>
 
     </body>
 
