Finishes profile page

--- a/src/html/ng-app/splash.html
+++ b/src/html/ng-app/splash.html
@@ -17,18 +17,13 @@
         <div id="rc-splash-nav">
 
             <ul>
-                <li ui-sref="profile">profile</li><li>resources</li><li>projects</li>
+                <li ui-sref="profile">profile</li><li ui-sref="resources">resources</li><li ui-sref="projects">projects</li>
             </ul>
 
         </div>
 
     </div>
 
-    <div id="rc-splash-footer">
-
-        <a href="http://www.github.com/rcorrie/" class="rc-icon-github"></a>
-
-    </div>
 
 </div>
 
