--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
     </head>
 
     <body ng-app="Rcorrie" bg-color>
+        
+        <div id="rc-bg-shiner"></div>
 
         <div ui-view="app" id="rc-view" autoscroll class="animate-state-change"></div>
+
+        <div id="rc-footer">
+
+            <a href="http://www.github.com/rcorrie/" class="rc-icon-github"></a>
+
+        </div>
 
         <script src="dist/vendor.js"></script>
         <script src="dist/templates.js"></script>
