Completes resources page

--- a/src/html/ng-app/profile.html
+++ b/src/html/ng-app/profile.html
@@ -2,11 +2,13 @@
 
     <div class="container">
 
-        <div class="profile-content"> 
+        <a href="javascript:void(0)" rc-go-back class="rc-back"></a>
+        <a href="javascript:void(0)" ui-sref="resources" class="rc-next"></a>
+
+        <div class="content"> 
             <div class="header">
-                <a href="javascript:void(0)" ui-sref="splash" class="rc-back"></a>
-                <h1>Ricardo Corrie</h1>
-                <span class="subtitle">Software Engineer at <a href="mailto:rc@rcorrie.com" class="hire-me">[ your company ]</a></span>
+                <h1>ricardo corrie</h1>
+                <span class="subtitle">software engineer at <a href="mailto:rc@rcorrie.com" class="hire-me">[ your company ]</a></span>
             </div>
             <div class="find-me"> <a href="tel:9543725263">954.372.5263</a> | <a href="mailto:rc@rcorrie.com">rc@rcorrie.com</a> | <a href="downloads/rcorrie-resume.pdf" class="rc-icon-download">resume</a></div>
             <p>My passion is all about creating purposeful experiences people can appreciate and enjoy. I am Ricardo, a Software Engineer living in South Florida. Since a young age, I felt drawn by creativity via many vehicles, until I got my hands on a computer and never let go! With my abilities I am able to take a simple concept and bring it to life on the web, from design all the way to deployment.</p>
