--- a/src/html/ng-app/resources.html
+++ b/src/html/ng-app/resources.html
@@ -1,22 +1,34 @@
-<div class="rc-sheet" id="rc-profile">
+<div class="rc-sheet" id="rc-resources">
 
     <div class="container">
 
-        <div class="profile-content"> 
+        <a href="javascript:void(0)" rc-go-back class="rc-back"></a>
+        <a href="javascript:void(0)" ui-sref="projects" class="rc-next"></a>
+        
+        <div class="content"> 
+
             <div class="header">
-                <a href="javascript:void(0)" ui-sref="splash" class="rc-back"></a>
-                <h1>Ricardo Corrie</h1>
-                <span class="subtitle">Software Engineer at <a href="mailto:rc@rcorrie.com" class="hire-me">[ your company ]</a></span>
+                <h1>resources</h1>
+                <span class="subtitle">languages, frameworks, and tools i use</span>
+                <div class="search">
+                    <input type="text" ng-model="filter" placeholder="filter keywords"/>
+                </div>
             </div>
-            <div class="find-me"> <a href="tel:9543725263">954.372.5263</a> | <a href="mailto:rc@rcorrie.com">rc@rcorrie.com</a> | <a href="downloads/rcorrie-resume.pdf" class="rc-icon-download">resume</a></div>
-            <p>My passion is all about creating purposeful experiences people can appreciate and enjoy. I am Ricardo, a Software Engineer living in South Florida. Since a young age, I felt drawn by creativity via many vehicles, until I got my hands on a computer and never let go! With my abilities I am able to take a simple concept and bring it to life on the web, from design all the way to deployment.</p>
 
-            <p>I am currently in the search for an innovative company that places value of quality and that is looking for a self-driven technology lover as my self. If you think this could be a match, please contact me</p>
-            <p style="border-top:dashed 1px #ddd; padding-top:10px;"><em><strong>Location:</strong> South Florida, USA (willing to relocate)</em></p>
+            <div class="lists">
+                <ul class="rc-resource-list" ng-repeat="category in model">
+                    <li class="title" ng-class="{disabled: !items.length}">{{category.category}}</li>
+                    <li ng-repeat="item in items = (category.items | filter: filter)" class="animate-list">
+                        <span class="level">
+                            <span style="width: {{item.level/10*100}}%; background:{{heatMap[item.level-1]}}"></span>
+                        </span>
+                        {{item.name}}
+                        <div style="font-size:0.8em" ng-show="filter.length && item.keywords.length"><strong>tags:</strong> <em>{{item.keywords}}</em></div>
+                    </li>
+                </ul>
+            </div>
+
         </div>
-
-        <div class="profile-pic"></div>
-
     </div>
 
 </div>
