Done with projects page

--- a/src/html/ng-app/profile.html
+++ b/src/html/ng-app/profile.html
@@ -2,15 +2,16 @@
 
     <div class="container">
 
-        <a href="javascript:void(0)" rc-go-back class="rc-back"></a>
-        <a href="javascript:void(0)" ui-sref="resources" class="rc-next"></a>
+        <a href="javascript:void(0)" ui-sref="splash" class="rc-home"></a>
+        <a href="javascript:void(0)" rc-nav="-1" class="rc-back"></a>
+        <a href="javascript:void(0)" rc-nav="1" class="rc-next"></a>
 
         <div class="content"> 
             <div class="header">
                 <h1>ricardo corrie</h1>
                 <span class="subtitle">software engineer at <a href="mailto:rc@rcorrie.com" class="hire-me">[ your company ]</a></span>
             </div>
-            <div class="find-me"> <a href="tel:9543725263">954.372.5263</a> | <a href="mailto:rc@rcorrie.com">rc@rcorrie.com</a> | <a href="downloads/rcorrie-resume.pdf" class="rc-icon-download">resume</a></div>
+            <div class="find-me"> <a href="tel:9543725263">954.372.5263</a> | <a href="mailto:rc@rcorrie.com">rc@rcorrie.com</a> | <a href="https://www.linkedin.com/in/rcorrie">linkedin</a> | <a href="downloads/rcorrie-resume.pdf" class="rc-icon-download">resume</a></div>
             <p>My passion is all about creating purposeful experiences people can appreciate and enjoy. I am Ricardo, a Software Engineer living in South Florida. Since a young age, I felt drawn by creativity via many vehicles, until I got my hands on a computer and never let go! With my abilities I am able to take a simple concept and bring it to life on the web, from design all the way to deployment.</p>
 
             <p>I am currently in the search for an innovative company that places value of quality and that is looking for a self-driven technology lover as my self. If you think this could be a match, please contact me</p>
