--- a/src/html/ng-app/resources.html
+++ b/src/html/ng-app/resources.html
@@ -2,8 +2,9 @@
 
     <div class="container">
 
-        <a href="javascript:void(0)" rc-go-back class="rc-back"></a>
-        <a href="javascript:void(0)" ui-sref="projects" class="rc-next"></a>
+        <a href="javascript:void(0)" ui-sref="splash" class="rc-home"></a>
+        <a href="javascript:void(0)" rc-nav="-1" class="rc-back"></a>
+        <a href="javascript:void(0)" rc-nav="1" class="rc-next"></a>
         
         <div class="content"> 
 
