--- a/src/html/ng-app/splash.html
+++ b/src/html/ng-app/splash.html
@@ -17,7 +17,7 @@
         <div id="rc-splash-nav">
 
             <ul>
-                <li ui-sref="profile">profile</li><li ui-sref="resources">resources</li><li ui-sref="projects">projects</li>
+                <li ui-sref="profile">profile</li><li ui-sref="resources">resources</li><li ui-sref="projects">recent</li>
             </ul>
 
         </div>
