--- a/src/html/ng-app/profile.html
+++ b/src/html/ng-app/profile.html
@@ -18,7 +18,11 @@
             <p style="border-top:dashed 1px #ddd; padding-top:10px;"><em><strong>Location:</strong> South Florida, USA (willing to relocate)</em></p>
         </div>
 
-        <div class="profile-pic"></div>
+        <div class="profile-pic"
+            tidy-img
+            img-src="dist/img/profile-pic.jpg"
+            loader="<img src='dist/img/preloader-small.gif'>"
+        ></div>
 
     </div>
 
