--- a/src/html/ng-app/recent.html
+++ b/src/html/ng-app/recent.html
@@ -25,7 +25,11 @@
             </ul>
         </div>
 
-        <div class="screenshot"></div>
+        <div class="screenshot"
+            tidy-img
+            img-src="dist/img/lr-screenshot.jpg"
+            loader="<img src='dist/img/preloader-small.gif'>"
+        ></div>
 
     </div>
 
