Adds read more to recent proejct

--- a/src/html/ng-app/recent.html
+++ b/src/html/ng-app/recent.html
@@ -12,7 +12,7 @@
             </div>
             <a href="https://itunes.apple.com/us/app/letsrumbl-daily-fantasy-sports/id994275380" target="_BLANK" class="project-title">letsRUMBL</a>
             <p>letsRUMBL is a social daily fantasy sports platform that allows fans to compete for prizes for free. It's aim is to attract the casual fantasy sports market and in turn revolutionize the way we play daily fantasy!</p>
-            <p>As part of the engineering team at letsRUMBL, my contributions can be seen throughout the entirity of the client-side codebase; from wireframing experiences, to system architecting, to feature development, and debugging. I also held a lead role on integrating our AngularJS app on a Cordova platform, native API integration, and app store distribution.</p>
+            <p>As part of the engineering team at letsRUMBL, my contributions can be seen throughout the entirity of the client-side codebase; from wireframing experiences, to system architecting, to feature development, and debugging. I also held a lead role on integrating our AngularJS app on a Cordova platform, native API integration, and app store distribution. <a href="downloads/rcorrie-resume.pdf">Read More</a></p>
             <ul class="stack">
                 <li>angularjs</li>
                 <li>react</li>
